fixed-top sticky-top

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body class="bg-secondary" data-spy="scroll" data-target="#leftNav" data-offset="300">
-    <header class="navbar navbar-expand navbar-dark bg-dark flex-column flex-md-row bd-navbar fixed-top">
+    <header class="navbar navbar-expand navbar-dark bg-dark flex-column flex-md-row bd-navbar sticky-top">
         <a class="navbar-brand mr-0 mr-md-2" href="/" aria-label="Bootstrap">
             <img class="bd-placeholder-img" width="36" height="36" src="favicon.png" />
             <title>Hugo Sciascia</title>
