--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         Hugo Sciascia
     </title>
     <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="fontawesome/css/all.min.css">
 
 </head>
 
@@ -19,7 +20,7 @@
             </svg>
         </a>
 
-        <div class="navbar-nav" id="nav-tab">
+        <div class="navbar-nav ml-md-auto" id="nav-tab">
             <a class="nav-item nav-link" href="{{ path('resume') }}">
                 Resume
             </a>
@@ -31,7 +32,7 @@
             </a>
         </div>
 
-        <ul class="navbar-nav ml-md-auto bg-dark">
+        <ul class="navbar-nav ml-md-auto">
             <li class="nav-item dropdown">
                 <a class="nav-item nav-link dropdown-toggle mr-md-2" href="#" id="fr" data-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false">
