--- a/index.html
+++ b/index.html
@@ -45,18 +45,18 @@
             </li>
         </ul>
     </header>
-    <div class="container-fluid">
+    <div class="container-fluid pt-3 pb-3">
         <div class="row">
             <div class="col-sm-2 text-center position-fixed">
-                <h2>
+                <h2 class="text-light">
                     Hugo Sciascia
                 </h2>
                 <img src="images/pdp.png" class="img-fluid rounded-circle p-1" />
                 <nav id="leftNav" class="navbar-nav nav-pills flex-column">
-                    <a class="nav-link" href="#presentation">Presentation</a>
-                    <a class="nav-link" href="#experience">Experience</a>
-                    <a class="nav-link" href="#education">Education</a>
-                    <a class="nav-link" href="#skills">Skills</a>
+                    <a class="nav-link text-light" href="#presentation">Presentation</a>
+                    <a class="nav-link text-light" href="#experience">Experience</a>
+                    <a class="nav-link text-light" href="#education">Education</a>
+                    <a class="nav-link text-light" href="#skills">Skills</a>
                 </nav>
             </div>
             <div class="col-sm-10 ml-sm-auto">
