sidebar d-none d-sm-block

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         </a>
 
         <div class="navbar-nav ml-md-auto" id="nav-tab">
-            <a class="nav-item nav-link" href="{{ path('resume') }}">
+            <a class="nav-item nav-link" href="index.html">
                 Resume
             </a>
-            <a class="nav-item nav-link" href="{{ path('projects') }}">
+            <a class="nav-item nav-link" href="projects.html">
                 Projects
             </a>
-            <a class="nav-item nav-link" href="{{ path('contact') }}">
+            <a class="nav-item nav-link" href="contact.html">
                 Contact
             </a>
         </div>
@@ -47,7 +47,7 @@
     </header>
     <div class="container-fluid pt-3 pb-3">
         <div class="row">
-            <div class="col-sm-2 text-center position-fixed">
+            <div class="col-sm-2 text-center position-fixed d-none  d-sm-block">
                 <h2 class="text-light">
                     Hugo Sciascia
                 </h2>
