--- a/contact.html
+++ b/contact.html
@@ -56,37 +56,43 @@
             <div class="col-sm-10 ml-sm-auto">
                 <div class="jumbotron">
                     <h1 class="display-4">
-                      Contact
+                        Contact
                     </h1>
                     <p class="lead">
-                      This is a simple hero unit, a simple jumbotron-style component for calling
-                      extra attention to featured content or information.
+                        This is a simple hero unit, a simple jumbotron-style component for calling
+                        extra attention to featured content or information.
                     </p>
                     <hr class="my-4" />
                     <ul class="nav nav-pills justify-content-center">
-                      <a class="nav-item nav-link" href="https://github.com/hugosciascia">
-                        <span class="fab fa-github fa-3x"></span>
-                      </a>
-                      <a class="nav-item nav-link" href="https://linkedin.com/in/hugosciascia">
-                        <span class="fab fa-linkedin-in fa-3x"></span>
-                      </a>
-                      <a class="nav-item nav-link" href="https://www.viadeo.com/fr/profile/hugo.sciascia">
+                        <a class="nav-item nav-link" href="https://github.com/hugosciascia">
+                            <span class="fab fa-github fa-3x"></span>
+                        </a>
+                        <a class="nav-item nav-link" href="https://linkedin.com/in/hugosciascia">
+                            <span class="fab fa-linkedin-in fa-3x"></span>
+                        </a>
+                        <!-- <a class="nav-item nav-link" href="https://www.viadeo.com/fr/profile/hugo.sciascia">
                         <span class="fab fa-viadeo fa-3x"></span>
-                      </a>
-                      <a class="nav-item nav-link" href="tel:+33675086221">
-                        <span class="fas fa-phone fa-3x"></span>
-                      </a>
-                      <a class="nav-item nav-link" href="mailto:hugo.sciascia@gmail.com">
-                        <span class="fas fa-envelope fa-3x"></span>
-                      </a>
+                      </a> -->
+                        <a class="nav-item nav-link" href="tel:+33675086221">
+                            <span class="fas fa-phone fa-3x"></span>
+                        </a>
+                        <a class="nav-item nav-link" href="mailto:hugo.sciascia@gmail.com">
+                            <span class="fas fa-envelope fa-3x"></span>
+                        </a>
                     </ul>
-                  </div>
+                </div>
             </div>
         </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
