--- a/index.html
+++ b/index.html
@@ -17,6 +17,105 @@
         <a class="navbar-brand mr-0 mr-md-2" href="/" aria-label="Bootstrap">
             <img class="bd-placeholder-img" width="36" height="36" src="favicon.png" />
             <title>Hugo Sciascia</title>
+            </svg>
+        </a>
+
+        <div class="navbar-nav ml-md-auto" id="nav-tab">
+            <a class="nav-item nav-link" href="index.html">
+                Resume
+            </a>
+            <a class="nav-item nav-link" href="projects.html">
+                Projects
+            </a>
+            <a class="nav-item nav-link" href="contact.html">
+                Contact
+            </a>
+        </div>
+
+        <ul class="navbar-nav ml-md-auto">
+            <li class="nav-item dropdown">
+                <a class="nav-item nav-link dropdown-toggle mr-md-2" href="#" id="fr" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">
+                    FR
+                </a>
+                <div class="dropdown-menu dropdown-menu-md-right" aria-labelledby="bd-versions">
+                    <a class="dropdown-item active" href="#">FR</a>
+                    <a class="dropdown-item" href="#">EN</a>
+                </div>
+            </li>
+        </ul>
+    </header>
+    <div class="container-fluid pt-3 pb-3">
+        <div class="row">
+            <div class="col-sm-2 text-center position-fixed d-none  d-sm-block">
+                <h2 class="text-light">
+                    Hugo Sciascia
+                </h2>
+                <img src="images/pdp.png" class="img-fluid rounded-circle p-1" />
+            </div>
+            <div class="col-sm-10 ml-sm-auto">
+                <div class="jumbotron">
+                    <h1 class="display-4">
+                        Contact
+                    </h1>
+                    <p class="lead">
+                        This is a simple hero unit, a simple jumbotron-style component for calling
+                        extra attention to featured content or information.
+                    </p>
+                    <hr class="my-4" />
+                    <ul class="nav nav-pills justify-content-center">
+                        <a class="nav-item nav-link" href="https://github.com/hugosciascia">
+                            <span class="fab fa-github fa-3x"></span>
+                        </a>
+                        <a class="nav-item nav-link" href="https://linkedin.com/in/hugosciascia">
+                            <span class="fab fa-linkedin-in fa-3x"></span>
+                        </a>
+                        <!-- <a class="nav-item nav-link" href="https://www.viadeo.com/fr/profile/hugo.sciascia">
+                        <span class="fab fa-viadeo fa-3x"></span>
+                      </a> -->
+                        <a class="nav-item nav-link" href="tel:+33675086221">
+                            <span class="fas fa-phone fa-3x"></span>
+                        </a>
+                        <a class="nav-item nav-link" href="mailto:hugo.sciascia@gmail.com">
+                            <span class="fas fa-envelope fa-3x"></span>
+                        </a>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
+</body>
+
+</html>
+
+<!-- <!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="UTF-8" />
+    <link rel="shortcut icon" type="image/png" href="favicon.png" />
+    <title>
+        Hugo Sciascia
+    </title>
+    <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="fontawesome/css/all.min.css">
+
+</head>
+
+<body class="bg-secondary" data-spy="scroll" data-target="#leftNav" data-offset="300">
+    <header class="navbar navbar-expand navbar-dark bg-dark flex-column flex-md-row bd-navbar sticky-top">
+        <a class="navbar-brand mr-0 mr-md-2" href="/" aria-label="Bootstrap">
+            <img class="bd-placeholder-img" width="36" height="36" src="favicon.png" />
+            <title>Hugo Sciascia</title>
         </a>
 
         <div class="navbar-nav ml-md-auto" id="nav-tab">
@@ -223,4 +322,4 @@
         crossorigin="anonymous"></script>
 </body>
 
-</html>
+</html> -->
