--- a/index.html
+++ b/index.html
@@ -44,11 +44,10 @@
             <div class="col-sm-10 ml-sm-auto">
                 <div class="jumbotron">
                     <h1 class="display-4">
-                        Contact
+                        Pour en savoir davanatge sur moi... 
                     </h1>
                     <p class="lead">
-                        This is a simple hero unit, a simple jumbotron-style component for calling
-                        extra attention to featured content or information.
+                        Vous pouvez me contacter ou obtenir des informations complémentaires en cliquant sur les icônes suivantes :
                     </p>
                     <hr class="my-4" />
                     <ul class="nav nav-pills justify-content-center">
