--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="col-sm-10 ml-sm-auto">
                 <div class="jumbotron">
                     <h1 class="display-4">
-                        Pour en savoir davanatge sur moi... 
+                        Pour en savoir davantage sur moi... 
                     </h1>
                     <p class="lead">
                         Vous pouvez me contacter ou obtenir des informations complémentaires en cliquant sur les icônes suivantes :
