--- a/index.html
+++ b/index.html
@@ -72,9 +72,13 @@
                             <div class="card">
                                 <img class="card-img-top" src="images/enssatraidaventure.png" alt="Card image cap">
                                 <div class="card-body">
-                                    <h5 class="card-title">ENSSAT Raid Aventure 2020</h5>
+                                    <h5 class="card-title">ENSSAT Raid Aventure 2020
+                                        <span class="badge badge-success">En cours</span>
+
+                                    </h5>
                                     <p class="card-text">Raid sportif à réaliser en binôme composée de Kayak, Trail et
-                                        VTT. 248 participants attendus pour un budget total estimé à 20 000€.</p>
+                                        VTT. 248 participants attendus pour un budget total estimé à 20 000€.
+                                    L'épreuve aura lieu le dimanche 10 mai 2020</p>
                                     <a href="https://raidaventure.projets-sh.enssat.fr/"
                                         class="btn btn-outline-dark">Visitez le site</a>
                                 </div>
@@ -84,9 +88,8 @@
                             <div class="card">
                                 <img class="card-img-top" src="images/liguecancer64.png" alt="Card image cap">
                                 <div class="card-body">
-                                    <h5 class="card-title">ENSSAT Raid Aventure 2020</h5>
-                                    <p class="card-text">Raid sportif à réaliser en binôme composée de Kayak, Trail et
-                                        VTT. 248 participants attendus pour un budget total estimé à 20 000€.</p>
+                                    <h5 class="card-title">Ligue Contre le Cancer – 64</h5>
+                                    <p class="card-text">Réalisation d’un intranet pour la gestion des Espaces Ligues.</p>
                                 </div>
                             </div>
                         </div>
