--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <p>Le site est actuellement en construction, et par conséquent seulement disponible pour un
-                            affichage sur ordinateur. </p>
+                        <p>Le site est actuellement en construction, et n'est encore optimisé pour un affichage sur
+                            mobile. </p>
                         <p>Merci d'avance pour votre compréhension.</p>
                     </div>
                     <div class="modal-footer">
