--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <p>Le site est actuellement en construction, et n'est encore optimisé pour un affichage sur
+                        <p>Ce site web est actuellement en construction, et n'est pas encore optimisé pour un affichage sur
                             mobile. </p>
                         <p>Merci d'avance pour votre compréhension.</p>
                     </div>
