--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                                 l'IUT de Bayonne et du Pays Basque.
                             </p>
                             <p>Ces 2 années d'études m'ont permis de me rendre compte de mon fort attrait pour les
-                                systèmes embarqués, à travers des projets de microcontrôleurs.</p>
+                                systèmes embarqués, au travers des projets de microcontrôleurs.</p>
                             <p>J'aimerais aujourd'hui développer mes connaissances en programmation temps-réel.</p>
                         </h1>
 
