--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <p>Ce site web est actuellement en construction, et n'est pas encore optimisé pour un affichage sur
+                        <p>Ce site web est actuellement en construction, et n'est pas encore optimisé pour un affichage
+                            sur
                             mobile. </p>
                         <p>Merci d'avance pour votre compréhension.</p>
                     </div>
@@ -90,14 +91,13 @@
                     <h1 class="display-3">Projets</h1>
 
                     <!-- Example row of columns -->
-                    <div class="row">
+                    <div class="row row-cols-1 row-cols-md-2">
                         <div class="col-md-4">
                             <div class="card">
                                 <img class="card-img-top" src="images/enssatraidaventure.png" alt="Card image cap">
                                 <div class="card-body">
                                     <h5 class="card-title">ENSSAT Raid Aventure 2020
-                                        <span class="badge badge-success">En cours</span>
-
+                                        <span class="badge badge-danger">Annulé</span>
                                     </h5>
                                     <p class="card-text">Raid sportif à réaliser en binôme composée de Kayak, Trail et
                                         VTT. 248 participants attendus pour un budget total estimé à 20 000€.
@@ -109,9 +109,37 @@
                         </div>
                         <div class="col-md-4">
                             <div class="card">
+                                <img class="card-img-top" src="images/tindheart.png" alt="Card image cap">
+                                <div class="card-body">
+                                    <h5 class="card-title">Tindheart
+                                        <span class="badge badge-success">2019</span>
+                                    </h5>
+                                    <p class="card-text">Analyse automatique de phonocardiogrammes sur DSP TMS320C5505.
+                                        Conception et simulation sous MATLAB.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="card">
+                                <img class="card-img-top" src="images/projetmicro1.png" alt="Card image cap">
+                                <div class="card-body">
+                                    <h5 class="card-title">Projet microcontrôleur
+                                        <span class="badge badge-success">2018</span>
+                                    </h5>
+                                    <p class="card-text">Réalisation par groupe de 4 étudiants d'un robot autonome, avec
+                                        affichage d'état, détection d'obstacles, réception des commandes Bluetooth et
+                                        commande de trajectoire. </p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-4">
+                            <div class="card">
                                 <img class="card-img-top" src="images/liguecancer64.png" alt="Card image cap">
                                 <div class="card-body">
-                                    <h5 class="card-title">Ligue Contre le Cancer – 64</h5>
+                                    <h5 class="card-title">Ligue Contre le Cancer – 64
+                                        <span class="badge badge-success">2017</span>
+                                    </h5>
                                     <p class="card-text">Réalisation d’un intranet pour la gestion des Espaces Ligues.
                                     </p>
                                 </div>
