--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                                         VTT. 248 participants attendus pour un budget total estimé à 20 000€.
                                         L'épreuve aura lieu le dimanche 10 mai 2020</p>
                                     <a href="https://raidaventure.projets-sh.enssat.fr/"
-                                        class="btn btn-outline-dark">Visitez le site</a>
+                                        class="btn btn-outline-dark float-right">Site web <span class="fas fa-globe"></span></a>
                                 </div>
                             </div>
                         </div>
