--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                                     <h5 class="card-title">Projet microcontrôleur
                                         <span class="badge badge-success">2018</span>
                                     </h5>
-                                    <p class="card-text">Réalisation par groupe de 4 étudiants d'un robot autonome, avec
+                                    <p class="card-text">Réalisation d'un robot autonome par groupe de 4 étudiants, avec
                                         affichage d'état, détection d'obstacles, réception des commandes Bluetooth et
                                         commande de trajectoire. </p>
                                 </div>
