--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                                 l'<b>ENSSAT</b> (École Nationale Supérieure des Sciences Appliquées et de Technologie) à
                                 <b>Lannion</b> (Université de Rennes 1).</p>
 
-                            <p>Avant d'être passioné par les Systèmes Embarqués, j'ai obtenu un DUT en Informatique à
+                            <p>Avant d'être passionné par les Systèmes Embarqués, j'ai obtenu un DUT en Informatique à
                                 l'IUT de Bayonne et du Pays Basque.
                             </p>
                             <p>Ces 2 années d'études m'ont permis de me rendre compte de mon fort attrait pour les
