--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <main role="main">
 
         <!-- Modal -->
-        <div class="modal fade" id="staticBackdrop" data-backdrop="static" tabindex="-1" role="dialog"
+    <!--    <div class="modal fade" id="staticBackdrop" data-backdrop="static" tabindex="-1" role="dialog"
             aria-labelledby="staticBackdropLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
@@ -60,7 +60,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>-->
 
         <!-- Main jumbotron for a primary marketing message or call to action -->
         <div class="tab-content" id="nav-tabContent">
