--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4">
+                        <!--<div class="col-md-4">
                             <div class="card">
                                 <img class="card-img-top" style="filter: blur(3px);" src="images/pdp.png"
                                     alt="Card image cap">
@@ -153,7 +153,7 @@
                                     <p class="card-text">En cours de construction</p>
                                 </div>
                             </div>
-                        </div>
+                        </div>-->
 
                     </div>
 
