--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="shortcut icon" type="image/png" href="favicon.png" />
+	<meta name="image" property="og:image" content="images/pdp.png">
     <title>
         Hugo Sciascia
     </title>
