--- a/index.html
+++ b/index.html
@@ -96,6 +96,22 @@
                             <div class="card">
                                 <img class="card-img-top" src="images/enssatraidaventure.png" alt="Card image cap">
                                 <div class="card-body">
+                                    <h5 class="card-title">Acquisition/restitution d’une séquence audio 
+                                        <span class="badge badge-success">2020</span>
+                                    </h5>
+                                    <p class="card-text">
+                                        Développement en VHDL d'une chaine de traitement audio fonctionnant à une carte FPGA DE0-Nano-SoC (composé d'un ADC LTC 2308 et d'un DAC MPC 4725) : acquisition d'un signal en entrée, mémorisation dans deux mémoires, et restitution du signal échantillonné via un haut-parleur.
+                                        Utilisation de Quartus et de Modelsim.
+                                    </p>
+                                    <a href="https://raidaventure.projets-sh.enssat.fr/"
+                                        class="btn btn-outline-dark float-right">Site web <span class="fas fa-globe"></span></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="card">
+                                <img class="card-img-top" src="images/enssatraidaventure.png" alt="Card image cap">
+                                <div class="card-body">
                                     <h5 class="card-title">ENSSAT Raid Aventure 2020
                                         <span class="badge badge-danger">Annulé</span>
                                     </h5>
