--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="shortcut icon" type="image/png" href="favicon.png" />
-	<meta name="image" property="og:image" content="images/pdp.png">
+    <meta name="image" property="og:image" content="images/pdp.png">
     <title>
         Hugo Sciascia
     </title>
@@ -27,7 +27,7 @@
             aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="navbar-collapse collapse" id="navbarsExampleDefault" style="">
+        <div class="navbar-collapse collapse" id="navbarsExampleDefault">
             <nav id="topNav" class="navbar-nav nav-pills ml-auto">
                 <a class="nav-link" href="#about">A propos</a>
                 <a class="nav-link" href="#projects">Projets</a>
@@ -40,7 +40,7 @@
     <main role="main">
 
         <!-- Modal -->
-    <!--    <div class="modal fade" id="staticBackdrop" data-backdrop="static" tabindex="-1" role="dialog"
+        <!--    <div class="modal fade" id="staticBackdrop" data-backdrop="static" tabindex="-1" role="dialog"
             aria-labelledby="staticBackdropLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
@@ -94,17 +94,35 @@
                     <div class="row row-cols-1 row-cols-md-2">
                         <div class="col-md-4">
                             <div class="card">
-                                <img class="card-img-top" src="images/enssatraidaventure.png" alt="Card image cap">
+                                <img class="card-img-top" src="images/vhdl.jpg" alt="Card image cap">
                                 <div class="card-body">
-                                    <h5 class="card-title">Acquisition/restitution d’une séquence audio 
+                                    <h5 class="card-title">Acquisition/restitution d’une séquence audio
                                         <span class="badge badge-success">2020</span>
                                     </h5>
                                     <p class="card-text">
-                                        Développement en VHDL d'une chaine de traitement audio fonctionnant à une carte FPGA DE0-Nano-SoC (composé d'un ADC LTC 2308 et d'un DAC MPC 4725) : acquisition d'un signal en entrée, mémorisation dans deux mémoires, et restitution du signal échantillonné via un haut-parleur.
+                                        Développement en VHDL d'une chaine de traitement audio fonctionnant sur carte
+                                        DE0-Nano-SoC (composée d'un ADC LTC 2308 et d'un DAC MPC 4725) : acquisition
+                                        d'un signal en entrée, mémorisation dans deux mémoires, et restitution du signal
+                                        échantillonné via un haut-parleur.
                                         Utilisation de Quartus et de Modelsim.
                                     </p>
-                                    <a href="https://raidaventure.projets-sh.enssat.fr/"
-                                        class="btn btn-outline-dark float-right">Site web <span class="fas fa-globe"></span></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="card">
+                                <img class="card-img-top" src="images/OpenM128.jpg" alt="Card image cap">
+                                <div class="card-body">
+                                    <h5 class="card-title">Projet d'interfaçage
+                                        <span class="badge badge-success">2020</span>
+                                    </h5>
+                                    <p class="card-text">
+                                        Etude et programmation en C sur OpenM128 (ATmega128) avec :
+                                        Ecran LCD 128x64 interfacé en SPI,
+                                        Horloge RTC PCF8568 interfacée en I2C,
+                                        Thermomètre DS18B20 interfacés en OneWire,
+                                        Convertisseur RS232- USB
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -119,7 +137,8 @@
                                         VTT. 248 participants attendus pour un budget total estimé à 20 000€.
                                         L'épreuve aura lieu le dimanche 10 mai 2020</p>
                                     <a href="https://raidaventure.projets-sh.enssat.fr/"
-                                        class="btn btn-outline-dark float-right">Site web <span class="fas fa-globe"></span></a>
+                                        class="btn btn-outline-dark float-right">Site web <span
+                                            class="fas fa-globe"></span></a>
                                 </div>
                             </div>
                         </div>
