--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                                         Etude et programmation en C sur OpenM128 (ATmega128) avec :
                                         Ecran LCD 128x64 interfacé en SPI,
                                         Horloge RTC PCF8568 interfacée en I2C,
-                                        Thermomètre DS18B20 interfacés en OneWire,
+                                        Thermomètre DS18B20 interfacé en OneWire,
                                         Convertisseur RS232- USB
                                     </p>
                                 </div>
